# glim

./: CMakeLists.txt  LICENSE  README.md  clean.bash  glim.pro  run.bash
cmake/: gwf_module.cmake
work/: CMakeLists.txt  Cmd.cpp  Cmd.h  Const.h  Core.cpp  Core.h  FullTextIndexer.cpp  FullTextIndexer.h  FullTextSearcher.cpp  FullTextSearcher.h  Task.cpp  Task.h  main.cpp
